; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv6.c_sfe_ipv6_change_dsfield.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv6.c_sfe_ipv6_change_dsfield.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfe_ipv6_ip_hdr = type { i32 }

@SFE_IPV6_DSCP_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sfe_ipv6_ip_hdr*, i64)* @sfe_ipv6_change_dsfield to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sfe_ipv6_change_dsfield(%struct.sfe_ipv6_ip_hdr* %0, i64 %1) #0 {
  %3 = alloca %struct.sfe_ipv6_ip_hdr*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store %struct.sfe_ipv6_ip_hdr* %0, %struct.sfe_ipv6_ip_hdr** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.sfe_ipv6_ip_hdr*, %struct.sfe_ipv6_ip_hdr** %3, align 8
  %7 = bitcast %struct.sfe_ipv6_ip_hdr* %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @SFE_IPV6_DSCP_MASK, align 4
  %11 = call i32 @htons(i32 %10)
  %12 = and i32 %9, %11
  %13 = load i64, i64* %4, align 8
  %14 = trunc i64 %13 to i32
  %15 = shl i32 %14, 4
  %16 = call i32 @htons(i32 %15)
  %17 = or i32 %12, %16
  %18 = load i32*, i32** %5, align 8
  store i32 %17, i32* %18, align 4
  ret void
}

declare dso_local i32 @htons(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
